# Project-Weather-

./: CMakeLists.txt  array.h  average_temperature.c  average_temperature.h  base.c  base.h  curent_date.c  curent_date.h  date.c  date.h  earth_phenom_constants.c  earth_phenom_constants.h  earth_phenom_printing.c  earth_phenom_printing.h  main.c  month_name.c  month_name.h  precipitation_constants.c  precipitation_constants.h  precipitation_printing.c  precipitation_printing.h  print_date.c  print_date.h  print_feeling_temperature.c  print_feeling_temperature.h  print_feelling_temperature.c  print_feelling_temperature.h  print_felling_temperature.c  print_felling_temperature.h  print_pressure.c  print_pressure.h  print_recomendation.c  print_recomendation.h  temperature.h  temperature_pinting.c  temperature_pinting.h  temperature_printing.c  temperature_printing.h  test.h  weather.c  (+10 more)
input_samples/: input_no_wind.txt  input_same_precipitation.txt  input_wind_not_change.txt
